# MyPersonalScriptsAndConfigs

./: .gitignore  AGENTS.md  LICENSE  README.md  linux-entry.sh  main.py  mainSetUpScript.ps1  mySetupScript.ps1  pyproject.toml  temp.txt  testescript.ahk  windows-entry.bat
archive/legacy/bash_Scripts/: createAlias.sh  createDefaultDirectoryStructure.sh  createProjectAlias.sh  ensureGitinstalled.sh  installNeovim.sh  installPowershell.sh
assets/: README.md
assets/autohotkey/: main.ahk
assets/glazewm/: config.yaml
autoHotKeyScripts/: testescript.ahk
bash_Scripts/: createAlias.sh  createDefaultDirectoryStructure.sh  installNeovim.sh  installPowershell.sh
configs/glazeWM/: config.yaml
docs/decisions/: README.md
docs/specs/: README.md  neovim-isolated-verification.md  planner-foundation.md
profiles/: full.toml
scripts/autoHotKeyScripts/: mainScript.ahk  testescript.ahk
scripts/bash_Scripts/: createProjectAlias.sh  ensureGitinstalled.sh
scripts/ps1Scripts/core/: Get-ProjectsFolder.ps1  ensureFolderexists.ps1  getEnvironmentType.ps1  startinstaller.ps1  write-ColoredMesage.ps1
scripts/ps1Scripts/windows/: callbash.ps1  configure-GlazeWM.ps1  ensure-GitInstalled.ps1  install-AutoHotkey.ps1  install-WithWinget.ps1  loader.ps1
src/personal_setup/: __init__.py  __main__.py  app.py  cli.py  errors.py
tests/unit/: test_autohotkey.py  test_check_result.py  test_cli.py  test_executor.py  test_glazewm.py  test_neovim.py  test_planner.py  test_profile_loader.py  test_project_folders.py  test_user_settings.py  test_verifier.py
(+26 files in other folders)
