[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-setup"
version = "0.1.0"
description = "Declarative CLI to install and validate a personal workstation setup"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
personal-setup = "personal_setup.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
